# lab2

./: .gitignore  CMakeLists.txt  Makefile  container.h  date.h  license.h  main.cpp  table.h
